# ntfy-toast

./: .gitlab-ci.yml  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: NtfyMacros.cmake
data/: CMakeLists.txt  help.txt
examples/python/: ntfytoast.py
examples/qt/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  linkhelper.cpp  linkhelper.h  main.cpp  ntfytoastactioncenterintegration.h  ntfytoastactions.h  ntfytoasts.cpp  ntfytoasts.h  snoretoasts.cpp  snoretoasts.h  toasteventhandler.cpp  toasteventhandler.h  utils.cpp  utils.h
